syntax = "proto3";
package NOTIFICATIONS;
import "../google/protobuf/wrappers.proto";
import "../reusables/user.proto";
import "../reusables/email.proto";
service EmailNotificationService {
    rpc SendEmail (SendEmailInput) returns (google.protobuf.BoolValue);
    rpc ConfirmEmail(ConfirmEmailInput) returns (google.protobuf.BoolValue);
    rpc FindAllByUserId(FindAllByUserIdInput) returns (FindAllByUserIdOutput);
}

message SendEmailInput{
    User user = 1;
    EmailType emailType = 2;
}
message ConfirmEmailInput{
    User user = 1;
    string token = 2;
    string verificationToken = 3;
    EmailType emailType = 4;
}
message FindAllByUserIdOutput {
    repeated Email email = 1;
}
message FindAllByUserIdInput {
    int32 userId = 1;
}