syntax = "proto3";
package REUSABLES;

import "../google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "./user.proto";
enum EmailType {
    CONFIRMATION = 0;
    RESET_PASSWORD = 1;
}
message Email {
    google.protobuf.Timestamp createdAt = 1;
    google.protobuf.Timestamp updatedAt = 2;
    google.protobuf.Timestamp deletedAt = 3;
    int32 id = 4;
    google.protobuf.Timestamp sentDate = 5;
    EmailType emailType = 6;
    User sender = 7;
    string token = 8;
    string verificationToken = 9;
    bool isExpired = 10;
}