syntax = "proto3";
package REUSABLES;
import "../google/protobuf/wrappers.proto";

enum Gender {
    MALE = 0;
    FEMALE = 1;
}

message User{
    int32 id = 1;
    string username = 2;
    string firstname = 3;
    string lastname = 4;
    bool completedSignUp = 5;
    int32 age = 6;
    string email = 7;
    string localisation=8;
    string telNumber=9;
    Gender gender = 10;
    repeated string roles = 11;
}